feat: validator, constraint 샘플 추가